frontend/assets/stylesheets/pages/_events.scss
/* ... */
.event__picture-byline {
    clear: both;
    @include fs-textSans(1);
    color: $c-neutral2;
    margin-bottom: rem($gs-gutter * 2);

    @include mq(mem-full) {
        padding: rem(8px) rem($gs-gutter) rem($gs-gutter * 2 - 4) rem(gs-span(2) + $gs-gutter * 2);
        margin-bottom: 0;
    }
}

.event-content {
    padding: 0;
    background-color: $white;

    @include mq(desktop) {
        background-color: transparent;
    }

    .event-content__image {
        margin: 0 auto;

        @include mq(mem-full) {
            width: rem(gs-span(14) + $gs-gutter * 2);
        }

        img {
            width: 100%;
        }
    }

    .event-content__container {
        padding: rem($gs-gutter) rem($gs-gutter / 2);
        background-color: $white;

        @include mq(tablet) {
            width: rem(gs-span(9) + $gs-gutter * 2);
            padding: rem($gs-gutter * 3) 0;
            margin: 0 auto;
        }

        @include mq(desktop) {
            width: rem(gs-span(12) + $gs-gutter * 2);
            margin-top: rem(-8px);
        }

        @include mq(mem-full) {
            width: rem(gs-span(14) + $gs-gutter * 2);
        }

        .event-content__body {
            position: relative;

            @include mq(tablet) {
                float: left;
                padding: 0 rem($gs-gutter) 0 0;
                width: rem(gs-span(5) + $gs-gutter * 3);
            }

            @include mq(desktop) {
                width: rem(gs-span(8) + $gs-gutter * 2);
                padding: 0 rem($gs-gutter);
            }

            @include mq(mem-full) {
                width: rem(gs-span(10) + $gs-gutter * 2);
            }
        }
    }
}

.event__price-note,
.event__sale_ends_note,
.event__sale_ends_time {
    @include fs-textSans(4);
    display: inline-block;
}

.event__description {
    margin-bottom: rem($gs-gutter * 2);

    @include mq(mem-full) {
        width: rem(gs-span(8) - $gs-gutter);
        float: right;
    }

    h2 {
        @include fs-headline(1);
        margin: rem(8px) 0 rem(16px);
    }
    p, li {
        @include fs-bodyCopy(2);
    }
    ol,
    ul {
        list-style-position: inside;
        padding: 0;
        margin: 0 0 rem(8px);
    }
    .no-style-list {
        list-style: none;
    }
    .section-header {
        @include fs-headline(3);
        font-weight: 900;
        margin: rem(27px) 0 rem(10px);
    }

    blockquote {
        padding-left: rem(14px);
        border-left: rem(2px) solid #cfcfcd;
        font-style: italic;
        margin: 0 0 rem(16px);
    }

    blockquote p {
        margin: 0;
    }
}

.event-content__info {
    background-color: $c-neutral7;
    margin-bottom: rem($gs-gutter);
    padding: rem($gs-gutter);

    @include mq(tablet) {
        float: left;
        width: gs-span(4);
    }

    .event-content__name {
        @include fs-header(2);
        padding-bottom: rem($gs-gutter + 8px);
    }

    .event-content__time,
    .event-content__location,
    .event-content__tickets,
    .event-content__price {
        @include fs-textSans(3);
    }

    .event-content__location {

        .event-content__address {
            clear: both;
            display: block;
            margin-left: rem(40px);
        }
    }

    .event-content__time {
        .icon-sprite-large-early_booking {
            display: block;
            float: left;

            @include mq(tablet) {
                margin-bottom: rem($gs-gutter - 2px);
            }
        }
    }

    .event-content__price {
        padding-bottom: 0;

        .event-content__price-amount {
            @include fs-header(5);
        }
    }

    .event-content__sale-dates {

        .sale-dates__header {
            @include fs-textSans(3);
            font-weight: bold;
        }

        .sale-dates__item {
            @include fs-textSans(3);
            padding-left: rem($gs-gutter * 2);
            text-align: right;

            .sale-dates__item--left {
                float: left;
            }
        }
    }

    .event-content__sale-ends {
        padding: 0 0 rem(5px) rem($gs-gutter * 2);
    }

    .event-content__trail {
        @include fs-textSans(1);
        display: block;
    }

    time {
        float: right;
    }

    .action {
        margin-right: rem($gs-gutter);
        margin-right: 0;
        min-width: 100%;
    }

    .action--event-buy {
        background-color: $mem-live-accent;

        &:hover {
            background-color: darken($mem-live-accent, 5%);
        }
    }

    .terms-info {
        @include fs-textSans(1);
        padding-top: rem($gs-baseline/2);
    }

}

.event-content--line-divider {
    border-top: rem(1px) dotted $c-neutral3;
    padding: rem(5px) 0;
}

/* ==========================================================================
   Temp events hacky stuff (this needs a revisit once design has been confirmed)
   ========================================================================== */

.events-list {
    &.u-unstyled {
        &:first-child {
            margin-top: rem(-10px);
        }
    }
}
/* ... */

